272 - Replace InputParameters with Map